--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@ body {
 }
 
 /* Change background color when hovering over any .outer-container */
-/* body:hover {
-    background-color: yellow;
-} */
+body:hover {
+    background-color: darkcyan;
+}
 
 
 
@@ -69,7 +69,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
     z-index: 1000;
     height: 4rem;
 }
@@ -108,14 +108,14 @@ body {
     position: sticky;
     top: -6rem;
     z-index: 100;
-    background-color: white;
+    background-color: darkcyan;
 }
 
 /* Grid Items */
 .grid-item {
     padding: 1rem;
     height: 100%;
-    background-color: white;
+    background-color: transparent;
 }
 
 .empty {
@@ -138,7 +138,7 @@ body {
 }
 
 .hyperlink {
-    color: blueviolet;
+    color: blue;
     text-decoration: underline;
     cursor: pointer;
 }
@@ -158,7 +158,7 @@ body {
     height: 100%;
     position: relative;
     z-index: 1000;
-    border-right: 1px solid #eee;
+    /* border-right: 1px solid #eee; */
 }
 
 .left-scrollable {
@@ -168,11 +168,17 @@ body {
     padding-top: 6rem;
     display: flex;
     flex-direction: column;
-    gap: 25rem;
+    gap: 100rem;
     position: sticky;
     top: 5rem;
     scrollbar-width: none;
     -ms-overflow-style: none;
+}
+
+.left-scrollable>p {
+    position: sticky;
+    top: -5rem;
+
 }
 
 .left-scrollable::-webkit-scrollbar {
